apps/prometheus/manifest.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
spec:
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app.kubernetes.io/name: prometheus-server
    app.kubernetes.io/part-of: observability
    app.kubernetes.io/component: observator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus-server
      app.kubernetes.io/part-of: observability
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prometheus-server
        app.kubernetes.io/part-of: observability
        app.kubernetes.io/component: observator
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus
          args:
            - "--storage.tsdb.retention.time=12h"
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus/"
          ports:
            - name: web
              containerPort: 9090
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 500M
            limits:
              cpu: 1
              memory: 1Gi
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
            - name: prometheus-storage-volume
              mountPath: /prometheus/
      volumes:
        - name: prometheus-config-volume
          configMap:
            defaultMode: 420
            name: prometheus
        - name: prometheus-storage-volume
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app.kubernetes.io/name: prometheus-svc
    app.kubernetes.io/part-of: observability
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port:   '9090'
spec:
  selector: 
    app.kubernetes.io/name: prometheus-server
    app.kubernetes.io/part-of: observability
  type: NodePort  
  ports:
    - port: 9090
      targetPort: web
      nodePort: 30000
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-clusterip # Not really working right now
  namespace: monitoring
  labels:
    app.kubernetes.io/name: prometheus-clusterip
    app.kubernetes.io/part-of: observability
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: prometheus-server
    app.kubernetes.io/part-of: observability
  ports:
  - port: 9090
    targetPort: 9090
    protocol: TCP
---
apiVersion: networking.k8s.io/v1 # Not working now
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app.kubernetes.io/name: prometheus-ingress
    app.kubernetes.io/part-of: observability
    app.kubernetes.io/component: ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-clusterip
            port:
              number: 9090
